--- a/package.json
+++ b/package.json
@@ -1,28 +1,23 @@
 {
-  "name": "frontend",
+  "name": "portofolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.4.0",
+    "@iconscout/react-unicons": "^1.1.6",
     "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "animate.css": "^4.1.1",
-    "antd": "^4.16.13",
-    "axios": "^0.21.4",
-    "express": "^4.17.1",
-    "http-proxy-middleware": "^2.0.1",
+    "@testing-library/react": "^12.0.0",
+    "@testing-library/user-event": "^13.2.1",
+    "framer-motion": "^6.2.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-notifications-component": "^3.1.0",
-    "react-redux": "^7.2.4",
-    "react-router-dom": "^5.2.1",
-    "react-scripts": "4.0.3",
-    "redux": "^4.1.1",
-    "redux-thunk": "^2.3.0",
-    "web-vitals": "^1.1.2"
+    "react-scripts": "5.0.0",
+    "react-scroll": "^1.8.6",
+    "swiper": "^8.0.7",
+    "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "react-scripts start ",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -44,9 +39,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
-  "main": "index.js",
-  "author": "Annanay",
-  "license": "ISC"
+  }
 }
